--- a/portafolio.html
+++ b/portafolio.html
@@ -6,6 +6,18 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <div class="container text-center">
+        <div class="row">
+          <div class="col-12 col-md-6 col-lg-4">
+            Column
+          </div>
+          <div class="col-12 col-md-6 col-lg-4">
+            Column
+          </div>
+          <div class="col-12 col-md-6 col-lg-4">
+            Column
+          </div>
+        </div>
+      </div>
 </body>
 </html>
