imagenes en portafolio

--- a/portafolio.html
+++ b/portafolio.html
@@ -6,16 +6,50 @@
     <title>Document</title>
 </head>
 <body>
+  <!-- primera imagen -->
     <div class="container text-center ">
         <div class="row">
           <div class="col-12 col-md-6 col-lg-4">
-            Column
+            <div class="card" style="width: 18rem;">
+              <img src="./assets/img/cv1.PNG" class="card-img-top" alt="html">
+              <div class="card-body">
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              </div>
+            </div>
           </div>
+           <!-- primera imagen -->
           <div class="col-12 col-md-6 col-lg-4">
-            Column
+            <div class="card" style="width: 18rem;">
+              <img src="./assets/img/css.PNG" class="card-img-top" alt="css">
+              <div class="card-body">
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              </div>
+            </div>
           </div>
+           <!-- primera imagen -->
           <div class="col-12 col-md-6 col-lg-4">
-            Column
+            <div class="card" style="width: 18rem;">
+              <img src="./assets/img/flexbox.PNG" class="card-img-top" alt="flexbox">
+              <div class="card-body">
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              </div>
+            </div>
+             <!-- primera imagen -->
+            <div class="col-12 col-md-6 col-lg-4">
+              <div class="card" style="width: 18rem;">
+                <img src="./assets/img/boostrap.PNG" class="card-img-top" alt="flexbox">
+                <div class="card-body">
+                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                </div>
+              </div>
+               <!-- primera imagen -->
+              <div class="col-12 col-md-6 col-lg-4">
+                <div class="card" style="width: 18rem;">
+                  <img src="./assets/img/" class="card-img-top" alt="flexbox">
+                  <div class="card-body">
+                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                  </div>
+                </div>
           </div>
         </div>
       </div>
