--- a/index.html
+++ b/index.html
@@ -31,42 +31,40 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav ms-auto">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#"
+              <a class="nav-link active" aria-current="page" href="#sobre"
                 >Sobre mi</a
               >
             </li>
+            
             <li class="nav-item">
-              <a class="nav-link" href="#">Conocimiento</a>
+              <a class="nav-link" href="#Conocimiento">Conocimiento</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Proyectos</a>
+              <a class="nav-link" href="#Proyectos">Proyectos</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link disabled" aria-disabled="true">Contacto</a>
+              <a class="nav-link" href="#Contacto">Contacto</a>
             </li>
           </ul>
         </div>
       </div>
     </nav>
-    <section class="fondo text-light py-lg-5 mt-5 ">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-6">
-          <h1 display-1 fw-bold my-5>
-            Curriculum vitae
-          </h1>
-          <p>
-        Soy Doris Valverde Jara tengo 29 años, estudiate de frond end creando
-        nuevos proyectos con el objetivo de tener las capacidades necesarias en
-        el rubro de programacion.
-      </p>
+    <section class="fondo py-lg-5 ">
+      <div class="container text-center">
+        <div class="row">
+          <div class="col-md-6">
+            <p class="py-lg-3">
+              Soy Doris Valverde Jara tengo 29 años, estudiate de frond end
+              creando nuevos proyectos con el objetivo de tener las capacidades
+              necesarias en el rubro de programacion.
+            </p>
+          </div>
+          <div>
+            <img src="./assets/img/fotoandrea.png.PNG" alt="imagen Andrea" class=" imagen-andrea" />
+          </div>
         </div>
-        <div class="my-5 col-md-6>
-          <img src="./assets/img/fotoandrea.png.PNG" alt="imagen-andrea">
-        </div>
-      </section>
-    
-
+      </div>
+    </section>
     <footer class="bg-danger-subtle text-center p-4 text-dark">
       <p>Realizado por Doris Andrea Valverde jara - 2024</p>
     </footer>
