--- a/portafolio.html
+++ b/portafolio.html
@@ -7,39 +7,43 @@
 </head>
 <body>
   <!-- primera imagen -->
-    <div class="container text-center ">
+    <div class="container text-center tamaño-letra">
         <div class="row">
           <div class="col-12 col-md-6 col-lg-4">
             <div class="card" style="width: 18rem;">
-              <img src="./assets/img/cv1.PNG" class="card-img-top" alt="html">
+              <img src="./assets/img/html.PNG" class="card-img-top" alt="html">
               <div class="card-body">
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <h1>Primer Desafio</h1>
+                <p class="card-text">Curriculum vitae en HTML</p>
               </div>
             </div>
           </div>
-           <!-- primera imagen -->
+           <!-- segundo imagen -->
           <div class="col-12 col-md-6 col-lg-4">
             <div class="card" style="width: 18rem;">
               <img src="./assets/img/css.PNG" class="card-img-top" alt="css">
               <div class="card-body">
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <h1>Segundo desafio</h1>
+                <p class="card-text">venta de articulos de telefono en CSS</p>
               </div>
             </div>
           </div>
-           <!-- primera imagen -->
+           <!-- tercer imagen -->
           <div class="col-12 col-md-6 col-lg-4">
             <div class="card" style="width: 18rem;">
               <img src="./assets/img/flexbox.PNG" class="card-img-top" alt="flexbox">
               <div class="card-body">
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <h1>Tercer desafio</h1>
+                <p class="card-text">Iguana en Flexbox</p>
               </div>
             </div>
-             <!-- primera imagen -->
+             <!-- cuarto imagen -->
             <div class="col-12 col-md-6 col-lg-4">
               <div class="card" style="width: 18rem;">
                 <img src="./assets/img/boostrap.PNG" class="card-img-top" alt="flexbox">
                 <div class="card-body">
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                  <h1>Cuarto desafio</h1>
+                  <p class="card-text">CUPPON en Boostrap</p>
                 </div>
               </div>
                <!-- primera imagen -->
@@ -47,7 +51,8 @@
                 <div class="card" style="width: 18rem;">
                   <img src="./assets/img/" class="card-img-top" alt="flexbox">
                   <div class="card-body">
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    <h1>Quinto desafio</h1>
+                <p class="card-text">curriculum vitae Github</p>
                   </div>
                 </div>
           </div>
