--- a/index.html
+++ b/index.html
@@ -31,16 +31,12 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav ms-auto">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#sobre"
+              <a class="nav-link active" aria-current="page" href="#sobre mi"
                 >Sobre mi</a
               >
             </li>
-            
             <li class="nav-item">
-              <a class="nav-link" href="#Conocimiento">Conocimiento</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#Proyectos">Proyectos</a>
+              <a class="nav-link" href="#Portafolio">Portafolio</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#Contacto">Contacto</a>
@@ -49,24 +45,100 @@
         </div>
       </div>
     </nav>
-    <section class="fondo py-lg-5 ">
-      <div class="container text-center">
+    <section class="d-flex justify-content-center text-dark fondo">
+      <div class="container">
         <div class="row">
-          <div class="col-md-6">
-            <p class="py-lg-3">
-              Soy Doris Valverde Jara tengo 29 años, estudiate de frond end
+          <div class="col-md-6 my-5 d-flex align-items-center contenido">
+            <p class="py-5">
+              Sobre mi <br>
+              Soy Doris Valverde Jara tengo 29 años, estudiate de frond end,
               creando nuevos proyectos con el objetivo de tener las capacidades
-              necesarias en el rubro de programacion.
+              necesarias en el rubro de programacion. <br />
+              Tengo experiencia en trabajo en equipo, debido a mi profesion
+              Ingenieria en construccion civil.
             </p>
-          </div>
-          <div>
-            <img src="./assets/img/fotoandrea.png.PNG" alt="imagen Andrea" class=" imagen-andrea" />
+            <img
+              src="./assets/img/fotoandrea.png.PNG"
+              alt="imagen Andrea"
+              class="imagen-andrea"
+            />
           </div>
         </div>
       </div>
     </section>
-    <footer class="bg-danger-subtle text-center p-4 text-dark">
-      <p>Realizado por Doris Andrea Valverde jara - 2024</p>
+
+    <div class="titulo-principal text-dark text-center py-5">
+      <h1>Portafolio</h1>
+    </div>
+    <!-- primera imagen -->
+    <div class="container text-center tamaño-letra">
+      <div class="row ms-auto">
+        <div class="col-xs-12 col-md-6 col-lg-4 px-4 my-2 mx-0">
+          <div class="card">
+            <img src="./assets/img/html.PNG" class="card-img-top" alt="html" />
+            <div class="card-body">
+              <h2>Primer Desafio</h2>
+              <p class="card-text">Curriculum vitae en HTML</p>
+            </div>
+          </div>
+        </div>
+        <!-- segundo imagen -->
+        <div class="col-xs-12 col-md-6 col-lg-4 px-4 my-2 mx-0">
+          <div class="card">
+            <img src="./assets/img/css.PNG" class="card-img-top" alt="css" />
+            <div class="card-body">
+              <h2>Segundo desafio</h2>
+              <p class="card-text">venta de articulos de telefono en CSS</p>
+            </div>
+          </div>
+        </div>
+        <!-- tercer imagen -->
+        <div class="col-xs-12 col-md-6 col-lg-4 px-4 my-2 mx-0">
+          <div class="card">
+            <img
+              src="./assets/img/flexbox.PNG"
+              class="card-img-top"
+              alt="flexbox"
+            />
+            <div class="card-body">
+              <h2>Tercer desafio</h2>
+              <p class="card-text">Iguana en Flexbox</p>
+            </div>
+          </div>
+        </div>
+         <!-- tercer imagen -->
+         <div class="col-xs-12 col-md-6 col-lg-4 px-4 my-2 mx-0">
+          <div class="card">
+            <img
+              src="./assets/img/boostrap.PNG"
+              class="card-img-top"
+              alt="flexbox"
+            />
+            <div class="card-body">
+              <h2>Cuarto desafio</h2>
+              <p class="card-text">CUPPON EN BOOSTRAP</p>
+            </div>
+          </div>
+        </div>
+        <!-- tercer imagen -->
+        <div class="col-xs-12 col-md-6 col-lg-4 px-4 my-2 mx-0">
+          <div class="card">
+            <img
+              src="./assets/img/"
+              class="card-img-top"
+              alt="flexbox"
+            />
+            <div class="card-body">
+              <h2>Quinto desafio</h2>
+              <p class="card-text">Curriculum Vitae</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <footer class="bg-danger-subtle text-center text-dark footer px-0 py-3">
+      <p>Realizado por Doris Andrea Valverde jara - 2024 ©</p>
     </footer>
 
     <script
