--- a/portafolio.html
+++ b/portafolio.html
@@ -6,52 +6,55 @@
     <title>Document</title>
 </head>
 <body>
+  <div class="titulo-principal text-center">
+    <h1>PORTAFOLIO</h1>
+  </div>
   <!-- primera imagen -->
     <div class="container text-center tamaño-letra">
-        <div class="row">
-          <div class="col-12 col-md-6 col-lg-4">
-            <div class="card" style="width: 18rem;">
-              <img src="./assets/img/html.PNG" class="card-img-top" alt="html">
+        <div class="row ms-auto">
+          <div class="col-xs-12 col-md-6 col-lg-4 px-4 my-2 mx-0">
+            <div class="card">
+              <img src="./assets/img/fondo-m.avif" class="card-img-top" alt="html">
               <div class="card-body">
-                <h1>Primer Desafio</h1>
+                <h2>Primer Desafio</h2>
                 <p class="card-text">Curriculum vitae en HTML</p>
               </div>
             </div>
           </div>
            <!-- segundo imagen -->
-          <div class="col-12 col-md-6 col-lg-4">
-            <div class="card" style="width: 18rem;">
+          <div class="col-xs-12 col-md-6 col-lg-4 px-4 my-2 mx-0">
+            <div class="card" >
               <img src="./assets/img/css.PNG" class="card-img-top" alt="css">
               <div class="card-body">
-                <h1>Segundo desafio</h1>
+                <h2>Segundo desafio</h2>
                 <p class="card-text">venta de articulos de telefono en CSS</p>
               </div>
             </div>
           </div>
            <!-- tercer imagen -->
-          <div class="col-12 col-md-6 col-lg-4">
-            <div class="card" style="width: 18rem;">
+          <div class="col-xs-12 col-md-6 col-lg-4 px-4 my-2 mx-0">
+            <div class="card">
               <img src="./assets/img/flexbox.PNG" class="card-img-top" alt="flexbox">
               <div class="card-body">
-                <h1>Tercer desafio</h1>
+                <h2>Tercer desafio</h2>
                 <p class="card-text">Iguana en Flexbox</p>
               </div>
             </div>
              <!-- cuarto imagen -->
-            <div class="col-12 col-md-6 col-lg-4">
-              <div class="card" style="width: 18rem;">
+            <div class="col-xs-12 col-md-6 col-lg-4 px-4 my-2 mx-0">
+              <div class="card">
                 <img src="./assets/img/boostrap.PNG" class="card-img-top" alt="flexbox">
                 <div class="card-body">
-                  <h1>Cuarto desafio</h1>
+                  <h2>Cuarto desafio</h2>
                   <p class="card-text">CUPPON en Boostrap</p>
                 </div>
               </div>
                <!-- primera imagen -->
-              <div class="col-12 col-md-6 col-lg-4">
-                <div class="card" style="width: 18rem;">
-                  <img src="./assets/img/" class="card-img-top" alt="flexbox">
+              <div class="col-xs-12 col-md-6 col-lg-4 px-4 my-2 mx-0">
+                <div class="card">
+                  <img src="./assets/img/" class="card-img-top imagen-portafolio" alt="flexbox">
                   <div class="card-body">
-                    <h1>Quinto desafio</h1>
+                    <h2>Quinto desafio</h2>
                 <p class="card-text">curriculum vitae Github</p>
                   </div>
                 </div>
