--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
     />
 
     <link rel="stylesheet" href="assets/css/style.css" />
+    <script
+      src="https://kit.fontawesome.com/9c30631ee1.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
     <nav class="navbar navbar-expand-lg bg-danger-subtle ps-5">
@@ -50,7 +54,7 @@
         <div class="row">
           <div class="col-md-6 my-5 d-flex align-items-center contenido">
             <p class="py-5">
-              Sobre mi <br>
+              Sobre mi <br />
               Soy Doris Valverde Jara tengo 29 años, estudiate de frond end,
               creando nuevos proyectos con el objetivo de tener las capacidades
               necesarias en el rubro de programacion. <br />
@@ -71,7 +75,7 @@
       <h1>Portafolio</h1>
     </div>
     <!-- primera imagen -->
-    <div class="container text-center tamaño-letra">
+    <div class="container text-center text-dark tamaño-letra">
       <div class="row ms-auto">
         <div class="col-xs-12 col-md-6 col-lg-4 px-4 my-2 mx-0">
           <div class="card">
@@ -106,8 +110,8 @@
             </div>
           </div>
         </div>
-         <!-- tercer imagen -->
-         <div class="col-xs-12 col-md-6 col-lg-4 px-4 my-2 mx-0">
+        <!-- tercer imagen -->
+        <div class="col-xs-12 col-md-6 col-lg-4 px-4 my-2 mx-0">
           <div class="card">
             <img
               src="./assets/img/boostrap.PNG"
@@ -123,11 +127,7 @@
         <!-- tercer imagen -->
         <div class="col-xs-12 col-md-6 col-lg-4 px-4 my-2 mx-0">
           <div class="card">
-            <img
-              src="./assets/img/"
-              class="card-img-top"
-              alt="flexbox"
-            />
+            <img src="./assets/img/" class="card-img-top" alt="flexbox" />
             <div class="card-body">
               <h2>Quinto desafio</h2>
               <p class="card-text">Curriculum Vitae</p>
@@ -136,6 +136,22 @@
         </div>
       </div>
     </div>
+
+    <section class="text-dark">
+      <h2 class="titulo-iconos texto-center">Contacto</h2>
+      <ul class="iconos">
+        <li>
+          <i class="fa-solid fa-square-envelope"></i>
+          <p>andrea.avj03@gmail.com</p>
+         
+        </li>
+        <li><i class="fa-brands fa-linkedin"></i>
+
+        </li>
+        <li><i class="fa-brands fa-github"></i>
+        <a href="https://github.com/Andreadavj">Andreadavj</a></li>
+      </ul>
+    </section>
 
     <footer class="bg-danger-subtle text-center text-dark footer px-0 py-3">
       <p>Realizado por Doris Andrea Valverde jara - 2024 ©</p>
