actualizando imagen de fondo

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     ></script>
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg bg-danger-subtle ps-5">
+    <nav class="navbar navbar-expand-lg ps-5">
       <div class="container-fluid">
         <a class="navbar-brand" href="#">Doris Andrea Valverde Jara</a>
         <button
@@ -49,7 +49,7 @@
         </div>
       </div>
     </nav>
-    <section class="d-flex justify-content-center text-dark fondo">
+    <section class="d-flex justify-content-center text-dark fondo-sobremi">
       <div class="container">
         <div class="row">
           <div class="col-md-6 my-5 d-flex align-items-center contenido">
@@ -137,23 +137,23 @@
       </div>
     </div>
 
-    <section class="text-dark">
-      <h2 class="titulo-iconos texto-center">Contacto</h2>
+    <section class="text-dark texto-center fondo-icono">
+      <h2 class="titulo-iconos ">Contacto</h2>
       <ul class="iconos">
         <li>
           <i class="fa-solid fa-square-envelope"></i>
           <p>andrea.avj03@gmail.com</p>
          
         </li>
-        <li><i class="fa-brands fa-linkedin"></i>
-
+        <li><i class="fa-solid fa-phone"></i>
+             <p>+569 68021126</p>
         </li>
         <li><i class="fa-brands fa-github"></i>
         <a href="https://github.com/Andreadavj">Andreadavj</a></li>
       </ul>
     </section>
 
-    <footer class="bg-danger-subtle text-center text-dark footer px-0 py-3">
+    <footer class="text-center text-dark footer px-0 py-3">
       <p>Realizado por Doris Andrea Valverde jara - 2024 ©</p>
     </footer>
 
