Agregué botón WhatsApp en página web

--- a/index.html
+++ b/index.html
@@ -16,6 +16,18 @@
       src="https://kit.fontawesome.com/9c30631ee1.js"
       crossorigin="anonymous"
     ></script>
+
+    <link
+    rel="stylesheet"
+    href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css"
+  />
+  <a
+    href="https://api.whatsapp.com/send?phone=56951177975&text=Hola%21%20Quisiera%20m%C3%A1s%20informaci%C3%B3n%20sobre%20Varela%202."
+    class="float"
+    target="_blank"
+  >
+    <i class="fa fa-whatsapp miWa"></i>
+  </a>
   </head>
   <body>
     <nav class="navbar navbar-expand-lg ps-5">
